--- a/templates/principal.html
+++ b/templates/principal.html
@@ -39,9 +39,9 @@
 </head>
 <body>
     <h1>GAV VIP</h1>
-    <!-- Botón de Taxi VIP SUVS & VANS -->
-    <a href="/taxi-service" class="button">TAXI VIP SUVS & VANS</a>
-    <!-- Botón de Quito Tour VIP -->
-    <a href="/reservar-formulario" class="button">Quito Tour VIP</a>
+    <!-- Botón de TAXI -->
+    <a href="/taxi-service" class="button">TAXI</a>
+    <!-- Botón de TAXI VIP SUVS & VANS -->
+    <a href="/reservar-formulario" class="button">TAXI VIP SUVS & VANS</a>
 </body>
 </html>
