--- a/templates/principal.html
+++ b/templates/principal.html
@@ -13,16 +13,20 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: rgba(0, 0, 0, 0.8); /* Fondo opaco */
             color: white;
             text-align: center;
+            background-image: url('F1.jpg'); /* Imagen de fondo */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         h1 {
             font-size: 3em;
             margin-bottom: 20px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Sombra en el título */
         }
         .button {
-            background-color: #333;
+            background-color: rgba(0, 0, 0, 0.7);
             color: white;
             padding: 15px 30px;
             margin: 10px;
@@ -33,15 +37,13 @@
             transition: background-color 0.3s;
         }
         .button:hover {
-            background-color: #555;
+            background-color: rgba(0, 0, 0, 0.9);
         }
     </style>
 </head>
 <body>
     <h1>GAV VIP</h1>
-    <!-- Botón de TAXI -->
     <a href="/taxi-service" class="button">TAXI</a>
-    <!-- Botón de TAXI VIP SUVS & VANS -->
     <a href="/reservar-formulario" class="button">TAXI VIP SUVS & VANS</a>
 </body>
 </html>
