--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,7 +15,7 @@
             margin: 0;
             color: white;
             text-align: center;
-            background-image: url('F1.jpg'); /* Imagen de fondo */
+            background-image: url('F1.png'); /* Imagen de fondo */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
