--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,7 +15,8 @@
             margin: 0;
             color: white;
             text-align: center;
-            background-image: url('F1.png'); /* Imagen de fondo */
+            background-color: #000; /* Fondo de respaldo */
+            background-image: url('fondo.png'); /* Cambia aquí a la ruta o URL correcta */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -23,7 +24,7 @@
         h1 {
             font-size: 3em;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Sombra en el título */
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
         }
         .button {
             background-color: rgba(0, 0, 0, 0.7);
