--- a/templates/principal.html
+++ b/templates/principal.html
@@ -16,7 +16,7 @@
             color: white;
             text-align: center;
             background-color: #000; /* Fondo de respaldo */
-            background-image: url('fondo.png'); /* Cambia aquí a la ruta o URL correcta */
+            background-image: url('file:///C:/Users/User/OneDrive/Escritorio/templates/Fondo.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
