--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,8 +15,7 @@
             margin: 0;
             color: white;
             text-align: center;
-            background-color: #000; /* Fondo de respaldo */
-            background-image: url('file:///C:/Users/User/OneDrive/Escritorio/templates/Fondo.png');
+            background-image: url('fondo.png'); /* Asegúrate de tener la imagen */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
