--- a/templates/principal.html
+++ b/templates/principal.html
@@ -13,31 +13,21 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            color: white;
+            background-color: #f0f0f0;
             text-align: center;
-            background-image: url('fondo.png'); /* Asegúrate de tener la imagen */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
         }
         h1 {
             font-size: 3em;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
         }
         .button {
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: #333;
             color: white;
             padding: 15px 30px;
             margin: 10px;
             font-size: 1.2em;
             text-decoration: none;
             border-radius: 5px;
-            display: inline-block;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: rgba(0, 0, 0, 0.9);
         }
     </style>
 </head>
