--- a/templates/principal.html
+++ b/templates/principal.html
@@ -34,6 +34,6 @@
 <body>
     <h1>GAV VIP</h1>
     <a href="/taxi-service" class="button">TAXI</a>
-    <a href="/reservar-formulario" class="button">TAXI VIP SUVS & VANS</a>
+    <a href="/solicitud-vip" class="button">TAXI VIP SUVS & VANS</a>
 </body>
 </html>
