--- a/templates/principal.html
+++ b/templates/principal.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>GAV VIP</h1>
+    <h1>GAV</h1>
     <a href="/taxi-service" class="button">TAXI</a>
     <a href="/solicitud-vip" class="button">TAXI VIP SUVS & VANS</a>
 </body>
