--- a/templates/principal.html
+++ b/templates/principal.html
@@ -13,12 +13,17 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            color: #fff;
             text-align: center;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+                        url('fondito2.jpg') no-repeat center center fixed;
+            background-size: cover;
         }
         h1 {
             font-size: 3em;
             margin-bottom: 20px;
+            color: #FFD700; /* Color dorado para destacar */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         .button {
             background-color: #333;
@@ -28,11 +33,17 @@
             font-size: 1.2em;
             text-decoration: none;
             border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s, transform 0.2s;
+        }
+        .button:hover {
+            background-color: #555;
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <h1>GAV</h1>
+    <h1>GAV VIP</h1>
     <a href="/taxi-service" class="button">TAXI</a>
     <a href="/solicitud-vip" class="button">TAXI VIP SUVS & VANS</a>
 </body>
