--- a/templates/principal.html
+++ b/templates/principal.html
@@ -16,7 +16,7 @@
             color: #fff;
             text-align: center;
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-                        url('fondito2.jpg') no-repeat center center fixed;
+                        url('fondito2.jpeg') no-repeat center center fixed;
             background-size: cover;
         }
         h1 {
