--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GAV VIP</title>
     <style>
+        /* Estilos de la página */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -15,8 +16,9 @@
             margin: 0;
             color: #fff;
             text-align: center;
+            /* Fondo con degradado oscuro y la imagen de fondo */
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-                        url('/static/fondito2.jpeg') no-repeat center center fixed;
+                        url('/static/fondito2.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         h1 {
