--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GAV VIP</title>
     <style>
-        /* Estilos de la página */
+        /* Ajustes para la interfaz en dispositivos móviles */
+        * {
+            box-sizing: border-box;
+        }
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -16,23 +19,22 @@
             margin: 0;
             color: #fff;
             text-align: center;
-            /* Fondo con degradado oscuro y la imagen de fondo */
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
                         url('/static/fondito2.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-            color: #FFD700; /* Color dorado para destacar */
+            font-size: 2em;
+            padding: 10px;
+            color: #FFD700; /* Color dorado */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         .button {
             background-color: #333;
             color: white;
-            padding: 15px 30px;
-            margin: 10px;
-            font-size: 1.2em;
+            padding: 12px 25px;
+            margin: 8px;
+            font-size: 1.1em;
             text-decoration: none;
             border-radius: 5px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
@@ -41,6 +43,16 @@
         .button:hover {
             background-color: #555;
             transform: scale(1.05);
+        }
+        /* Media query para pantallas pequeñas */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.6em;
+            }
+            .button {
+                padding: 10px 20px;
+                font-size: 1em;
+            }
         }
     </style>
 </head>
