--- a/templates/principal.html
+++ b/templates/principal.html
@@ -20,7 +20,7 @@
             color: #fff;
             text-align: center;
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                        url('/static/fondito2.jpg') no-repeat center center fixed;
+                        url('/fondito2.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         h1 {
