--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,7 +15,7 @@
             margin: 0;
             color: #fff;
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                        url('pic.jpg') no-repeat center center fixed;
+                        url('/templates/pic.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         h1 {
