--- a/templates/principal.html
+++ b/templates/principal.html
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
             background-color: #f7f7f7;
-            background-image: url('pic.jpg'); /* Cambia 'pic.jpg' por el nombre correcto de tu imagen */
+            background-image: url('static/pic.jpg'); /* Ruta de la imagen */
             background-size: cover;
             background-position: center;
         }
@@ -24,6 +24,8 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 400px;
         }
         h1 {
             color: #333;
@@ -51,6 +53,9 @@
         <a href="/taxi-service">Taxi</a>
         <a href="/solicitud-vip">TAXI VIP SUVS & VANS</a>
         <a href="/turismo-local-nacional">Turismo Local y Nacional</a>
+        <a href="/alta-gama">Alta Gama</a>
+        <a href="/fletes-mudanzas">Fletes y Mudanzas</a>
+        <a href="/apoyo-hoteles">Apoyo Hoteles</a>
     </div>
 </body>
 </html>
