--- a/templates/principal.html
+++ b/templates/principal.html
@@ -8,16 +8,19 @@
 </head>
 <body>
     <div class="container">
-        <!-- Logo en la parte superior -->
+        <!-- Logo -->
         <img src="/static/images/logo.png" alt="Logo GAV VIP" class="logo">
         <h1>¡Bienvenido a GAV VIP!</h1>
         <p>Selecciona una opción para continuar:</p>
+
+        <!-- Botones -->
         <a href="/taxi-service"><button>TAXI</button></a>
         <a href="/turismo"><button>Turismo Local y Nacional</button></a>
         <a href="/alta-gama"><button>Alta Gama</button></a>
         <a href="/fletes-mudanzas"><button>Fletes y Mudanzas</button></a>
         <a href="/apoyo-hoteles"><button>Apoyo Hoteles</button></a>
     </div>
+
     <footer>
         &copy; 2024 GAV VIP - Todos los derechos reservados.
     </footer>
