--- a/templates/emergente.html
+++ b/templates/emergente.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background: url('/static/images/emergente.png') no-repeat center center;
-            background-size: cover;
-        }
-    </style>
     <script>
         // Redirigir automáticamente a la página principal después de 2 segundos
         setTimeout(function () {
@@ -21,6 +12,6 @@
         }, 2000);
     </script>
 </head>
-<body>
+<body class="background-emergente">
 </body>
 </html>
